# dops

./: CHANGELOG.md  pyproject.toml  readme.md  requirements.dev
.github/workflows/: build.yaml  build.yml
src/: manage.py  special.py  trig.py
src/dops/: grid.py  manage.py  special.py
src/tenops/: __init__.py  grid.py  reduce.py  special.py  trig.py  utils.py
tests/: test_grid.py  test_manage.py  test_reduce.py  test_special.py  test_trig.py  test_utils.py
