[tool.poetry]
name = "dops"
version = "0.1.0"
license = "MIT"
description = "Python package for creating a common interface for using numpy, pytorch, etc."
authors = ["Brandon Bererud <brandon.bergerud@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
coverage = "^7.0.0"
pytest = "^8.0.0"
pytest-mock = "*"
