[tool.poetry]
name = "dops"
version = "0.1.0"
license = "MIT"
description = "Python package for creating a common interface for using numpy, pytorch, etc."
authors = ["Brandon Bergerud <brandon.bergerud@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
coverage = "^7.0.0"
pytest = "^8.0.0"
pytest-mock = "*"
torch = "^2.3.0"
numpy = "^1.26.4"
tensorflow = "^2.16.1"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
